--- a/Galerie.html
+++ b/Galerie.html
@@ -19,7 +19,7 @@
 		"@type": "Organization",
 		"name": "Seed your lungs",
 		"url": "index.html",
-		"logo": "images/Logo_SYL72x.png"
+		"logo": "images/feuille.png"
 }</script>
     <meta property="og:title" content="Galerie">
     <meta property="og:type" content="website">
@@ -28,8 +28,8 @@
     <meta property="og:url" content="index.html">
   </head>
   <body class="u-body"><header class="u-clearfix u-header u-header" id="sec-4ec6"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="Accueil.html" data-page-id="210181073" class="u-image u-logo u-image-1" data-image-width="372" data-image-height="362" data-animation-name="rotateIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="" title="Accueil">
-          <img src="images/Logo_SYL72x.png" class="u-logo-image u-logo-image-1" data-image-width="70.1936">
+        <a href="Accueil.html" data-page-id="210181073" class="u-image u-logo u-image-1" data-image-width="132" data-image-height="154" data-animation-name="rotateIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="" title="Accueil">
+          <img src="images/feuille.png" class="u-logo-image u-logo-image-1" data-image-width="70.194">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 700; text-transform: uppercase;">
@@ -45,7 +45,7 @@
 </li><li class="u-nav-item"><a class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="Le-projet-SYL.html" style="padding: 10px 0px;">Le projet SYL</a>
 </li><li class="u-nav-item"><a class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="Blog.html" style="padding: 10px 0px;">Blog</a>
 </li><li class="u-nav-item"><a class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="Galerie.html" style="padding: 10px 0px;">Galerie</a>
-</li><li class="u-nav-item"><a class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="Nous-contacter.html" style="padding: 10px 0px;">Nous contacter</a>
+</li><li class="u-nav-item"><a class="u-border-2 u-border-active-grey-90 u-border-hover-grey-50 u-border-no-left u-border-no-right u-border-no-top u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="Contact.html" style="padding: 10px 0px;">Contact</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -56,7 +56,7 @@
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Le-projet-SYL.html" style="padding: 10px 0px;">Le projet SYL</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Blog.html" style="padding: 10px 0px;">Blog</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Galerie.html" style="padding: 10px 0px;">Galerie</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Nous-contacter.html" style="padding: 10px 0px;">Nous contacter</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contact.html" style="padding: 10px 0px;">Contact</a>
 </li></ul>
               </div>
             </div>
