--- a/Accueil.html
+++ b/Accueil.html
@@ -164,36 +164,90 @@
       </div>
     </section>
     <section class="u-clearfix u-white u-section-4" id="sec-e768">
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1"><!--blog--><!--blog_options_json--><!--{"type":"Recent","source":"","tags":"","count":""}--><!--/blog_options_json-->
+        <div class="u-blog u-container-style u-expanded-width u-layout-horizontal u-blog-1">
+          <div class="u-list-control"></div>
+          <div class="u-repeater u-repeater-1"><!--blog_post-->
+            <div class="u-blog-post u-container-style u-repeater-item">
+              <div class="u-container-layout u-similar-container u-container-layout-1"><!--blog_post_header-->
+                <h2 class="u-blog-control u-text">
+                  <a class="u-post-header-link" href="blog/jour-5-04032022.html"><!--blog_post_header_content-->Jour 5 - 04/03/2022<!--/blog_post_header_content--></a>
+                </h2><!--/blog_post_header-->
+                <a class="u-post-header-link" href="blog/jour-5-04032022.html"><!--blog_post_image-->
+                  <img src="images/2.jpeg" alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1"><!--/blog_post_image-->
+                </a><!--blog_post_content-->
+                <div class="u-blog-control u-post-content u-text"><!--blog_post_content_content-->Le voilà, le dernier réveil de la semaine, la nuit a été plutôt bonne pour tout le monde, on est maintenant habitué ;) Pour le petit déjeuner, on sort tout ce qui nous reste, barres de céréales, pim’s, abricots secs et on mange. La météo n’était pas avec ...<!--/blog_post_content_content--></div><!--/blog_post_content-->
+              </div>
+            </div><!--/blog_post--><!--blog_post-->
+            <div class="u-blog-post u-container-style u-repeater-item">
+              <div class="u-container-layout u-similar-container u-container-layout-2"><!--blog_post_header-->
+                <h2 class="u-blog-control u-text">
+                  <a class="u-post-header-link" href="blog/jour-4-03032022.html"><!--blog_post_header_content-->Jour 4 - 03/03/2022<!--/blog_post_header_content--></a>
+                </h2><!--/blog_post_header-->
+                <a class="u-post-header-link" href="blog/jour-4-03032022.html"><!--blog_post_image-->
+                  <img src="images/2.jpeg" alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-2"><!--/blog_post_image-->
+                </a><!--blog_post_content-->
+                <div class="u-blog-control u-post-content u-text"><!--blog_post_content_content-->Cette 4ème et dernière journée de marche commence tranquillement avec un petit déjeuner barres de céréales puis on fait le plein d’eau et on part en direction du Puy de Cômes, le premier objectif de la journée.&nbsp;Après 2h30 de marche dans la boue et des dou...<!--/blog_post_content_content--></div><!--/blog_post_content-->
+              </div>
+            </div><!--/blog_post--><!--blog_post-->
+            <div class="u-blog-post u-container-style u-repeater-item">
+              <div class="u-container-layout u-similar-container u-container-layout-3"><!--blog_post_header-->
+                <h2 class="u-blog-control u-text">
+                  <a class="u-post-header-link" href="blog/jour-3-02032022.html"><!--blog_post_header_content-->Jour 3 - 02/03/2022<!--/blog_post_header_content--></a>
+                </h2><!--/blog_post_header-->
+                <a class="u-post-header-link" href="blog/jour-3-02032022.html"><!--blog_post_image-->
+                  <img src="images/unnamed1.jpg" alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-3"><!--/blog_post_image-->
+                </a><!--blog_post_content-->
+                <div class="u-blog-control u-post-content u-text"><!--blog_post_content_content-->La 2e nuit se passe très bien, même mieux que la 1er pour certain, on commence à s’habituer à la température et à l’environnement. Après un petit déjeuner brioche, chocolat et une discussion avec un voisin, on repart en direction de Olby. La matinée est p...<!--/blog_post_content_content--></div><!--/blog_post_content-->
+              </div>
+            </div><!--/blog_post--><!--blog_post-->
+            <div class="u-blog-post u-container-style u-repeater-item">
+              <div class="u-container-layout u-similar-container u-container-layout-4"><!--blog_post_header-->
+                <h2 class="u-blog-control u-text">
+                  <a class="u-post-header-link" href="blog/jour-2-01032022.html"><!--blog_post_header_content-->Jour 2 - 01/03/2022<!--/blog_post_header_content--></a>
+                </h2><!--/blog_post_header-->
+                <a class="u-post-header-link" href="blog/jour-2-01032022.html"><!--blog_post_image-->
+                  <img src="images/unnamed.jpg" alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-4"><!--/blog_post_image-->
+                </a><!--blog_post_content-->
+                <div class="u-blog-control u-post-content u-text"><!--blog_post_content_content-->Premier réveil sous un grand ciel bleu mais un air bien frais… la nuit a été fraîche mais plutôt reposante pour tous !&nbsp;Pour le petit déjeuner on se contente de barre de céréales et de fruit sec, puis on part pour notre première journée complète de marche ...<!--/blog_post_content_content--></div><!--/blog_post_content-->
+              </div>
+            </div><!--/blog_post-->
+          </div>
+          <div class="u-list-control"></div>
+          <a class="u-absolute-vcenter u-custom-color-2 u-gallery-nav u-gallery-nav-prev u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-gallery-nav-1" href="#" role="button">
+            <span aria-hidden="true">
+              <svg viewBox="0 0 451.847 451.847"><path d="M97.141,225.92c0-8.095,3.091-16.192,9.259-22.366L300.689,9.27c12.359-12.359,32.397-12.359,44.751,0
+c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.354,12.354,32.391,0,44.744
+c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,234.018,97.141,225.92z"></path></svg>
+            </span>
+            <span class="sr-only">
+              <svg viewBox="0 0 451.847 451.847"><path d="M97.141,225.92c0-8.095,3.091-16.192,9.259-22.366L300.689,9.27c12.359-12.359,32.397-12.359,44.751,0
+c12.354,12.354,12.354,32.388,0,44.748L173.525,225.92l171.903,171.909c12.354,12.354,12.354,32.391,0,44.744
+c-12.354,12.365-32.386,12.365-44.745,0l-194.29-194.281C100.226,242.115,97.141,234.018,97.141,225.92z"></path></svg>
+            </span>
+          </a>
+          <a class="u-absolute-vcenter u-custom-color-2 u-gallery-nav u-gallery-nav-next u-icon-circle u-opacity u-opacity-70 u-spacing-10 u-text-white u-gallery-nav-2" href="#" role="button">
+            <span aria-hidden="true">
+              <svg viewBox="0 0 451.846 451.847"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744
+L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284
+c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path></svg>
+            </span>
+            <span class="sr-only">
+              <svg viewBox="0 0 451.846 451.847"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744
+L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284
+c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"></path></svg>
+            </span>
+          </a>
+        </div><!--/blog-->
         <div class="u-container-style u-group u-group-1">
           <div class="u-container-layout">
-            <h2 class="u-custom-font u-font-montserrat u-text u-text-1">
+            <h2 class="u-custom-font u-font-montserrat u-text u-text-9">
               <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-btn-1" href="Blog.html" data-page-id="2709327204">BLOG</a>
             </h2>
-            <p class="u-custom-font u-font-montserrat u-text u-text-2">Le sport, la santé, l’écologie...ça vous intéresse ?  Retrouvez nos articles sur ces sujets qui vous tiennent sûrement à coeur tout comme nous.</p>
+            <p class="u-custom-font u-font-montserrat u-text u-text-10">Le sport, la santé, l’écologie...ça vous intéresse ?  Retrouvez nos articles sur ces sujets qui vous tiennent sûrement à coeur tout comme nous.</p>
           </div>
         </div>
-        <div class="u-clearfix u-expanded-width u-gutter-20 u-layout-wrap u-layout-wrap-1">
-          <div class="u-layout">
-            <div class="u-layout-row">
-              <div class="u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-1">
-                <div class="u-container-layout">
-                  <img class="u-expanded-width u-image u-image-1" src="images/2c1d5ea3d14ccd65c0cbcf5497a562b7.jpeg">
-                  <p class="u-custom-font u-font-montserrat u-text u-text-3">Facile facile societates suo quas honoribus Quid iis in versantur enim enim omittam reque Haec enim amici suo amici graves quam invenias suo quam qui in est iis amici in.</p>
-                  <a href="Blog.html" data-page-id="2709327204" class="u-btn u-button-style u-custom-color-2 u-custom-font u-font-montserrat u-text-body-alt-color u-btn-2">LIRE LA SUITE</a>
-                </div>
-              </div>
-              <div class="u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-2">
-                <div class="u-container-layout">
-                  <img class="u-expanded-width u-image u-image-2" src="images/7caf258988b69cc34f0e0ce89d17a719.jpeg">
-                  <p class="u-custom-font u-font-montserrat u-text u-text-4">Facile facile societates suo quas honoribus Quid iis in versantur enim enim omittam reque Haec enim amici suo amici graves quam invenias suo quam qui in est iis amici in.</p>
-                  <a href="Blog.html" data-page-id="2709327204" class="u-btn u-button-style u-custom-color-2 u-custom-font u-font-montserrat u-text-body-alt-color u-btn-3">LIRE LA SUITE</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <a href="Blog.html" data-page-id="2709327204" class="u-btn u-button-style u-custom-color-2 u-custom-font u-font-montserrat u-text-body-alt-color u-btn-4">lire les articles<br>
+        <a href="Blog.html" data-page-id="2709327204" class="u-btn u-button-style u-custom-color-2 u-custom-font u-font-montserrat u-text-body-alt-color u-btn-2">lire les articles<br>
         </a>
       </div>
     </section>
