--- a/Galerie.html
+++ b/Galerie.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="styles.css" media="screen">
 <link rel="stylesheet" href="Galerie.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="styles.css" defer=""></script>
-    <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
+    <script class="u-script" type="text/javascript" src="script.js" defer=""></script>
+    <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
     <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
     
     
@@ -26,7 +26,7 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
-  <body class="u-body"><header class="u-clearfix u-header u-sticky u-sticky-6268 u-white u-header" id="sec-4ec6"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-xl-mode"><header class="u-clearfix u-header u-sticky u-sticky-6268 u-white u-header" id="sec-4ec6"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="Accueil.html" data-page-id="210181073" class="u-image u-logo u-image-1" data-image-width="132" data-image-height="154" data-animation-name="rotateIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="" title="Accueil">
           <img src="images/feuille.png" class="u-logo-image u-logo-image-1" data-image-width="70.194">
         </a>
@@ -73,7 +73,7 @@ borders: top right bottom left !important
           <div class="u-gallery-inner u-gallery-inner-1">
             <div class="u-effect-fade u-gallery-item">
               <div class="u-back-slide" data-image-width="1080" data-image-height="565">
-                <img class="u-back-image u-expanded" src="images/275529672_3183491318546316_2082270678249657883_n.jpg">
+                <img class="u-back-image u-expanded" src="images/275529672_3183491318546316_2082270678249657883_n-45.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-1">
                 <h3 class="u-gallery-heading"></h3>
@@ -100,7 +100,7 @@ borders: top right bottom left !important
             </div>
             <div class="u-effect-fade u-gallery-item">
               <div class="u-back-slide" data-image-width="1599" data-image-height="777">
-                <img class="u-back-image u-expanded" src="images/WhatsAppImage2022-03-07at15.34.40.jpeg">
+                <img class="u-back-image u-expanded" src="images/WhatsAppImage2022-03-07at15.34.40-48.jpeg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-4">
                 <h3 class="u-gallery-heading"></h3>
@@ -109,7 +109,7 @@ borders: top right bottom left !important
             </div>
             <div class="u-effect-fade u-gallery-item">
               <div class="u-back-slide" data-image-width="1200" data-image-height="1600">
-                <img class="u-back-image u-expanded" src="images/trajet.jpeg">
+                <img class="u-back-image u-expanded" src="images/trajet-49.jpeg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-5">
                 <h3 class="u-gallery-heading"></h3>
@@ -136,7 +136,7 @@ borders: top right bottom left !important
             </div>
             <div class="u-effect-fade u-gallery-item">
               <div class="u-back-slide" data-image-width="1599" data-image-height="777">
-                <img class="u-back-image u-expanded" src="images/j44.jpeg">
+                <img class="u-back-image u-expanded" src="images/j44-52.jpeg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-8">
                 <h3 class="u-gallery-heading"></h3>
@@ -145,7 +145,7 @@ borders: top right bottom left !important
             </div>
             <div class="u-effect-fade u-gallery-item">
               <div class="u-back-slide" data-image-width="1200" data-image-height="1600">
-                <img class="u-back-image u-expanded" src="images/WhatsAppImage2022-03-17at10.34.341.jpeg">
+                <img class="u-back-image u-expanded" src="images/WhatsAppImage2022-03-17at10.34.341-53.jpeg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-9">
                 <h3 class="u-gallery-heading"></h3>
@@ -176,7 +176,7 @@ borders: top right bottom left !important
             </div>
             <div class="u-effect-fade u-effect-hover-zoom u-gallery-item">
               <div class="u-back-slide" data-image-width="900" data-image-height="1600">
-                <img class="u-back-image u-expanded" src="images/j41.jpeg">
+                <img class="u-back-image u-expanded" src="images/j41-56.jpeg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-12">
                 <h3 class="u-gallery-heading"></h3>
@@ -185,7 +185,7 @@ borders: top right bottom left !important
             </div>
             <div class="u-effect-fade u-effect-hover-zoom u-gallery-item">
               <div class="u-back-slide" data-image-width="1600" data-image-height="1200">
-                <img class="u-back-image u-expanded" src="images/j34.JPG">
+                <img class="u-back-image u-expanded" src="images/j34-57.JPG">
               </div>
               <div class="u-over-slide u-shading u-over-slide-13">
                 <h3 class="u-gallery-heading"></h3>
@@ -203,7 +203,7 @@ borders: top right bottom left !important
             </div>
             <div class="u-effect-fade u-effect-hover-zoom u-gallery-item">
               <div class="u-back-slide" data-image-width="1600" data-image-height="1200">
-                <img class="u-back-image u-expanded" src="images/j32.JPG">
+                <img class="u-back-image u-expanded" src="images/j32-59.JPG">
               </div>
               <div class="u-over-slide u-shading u-over-slide-15">
                 <h3 class="u-gallery-heading"></h3>
@@ -221,7 +221,7 @@ borders: top right bottom left !important
             </div>
             <div class="u-effect-fade u-effect-hover-zoom u-gallery-item">
               <div class="u-back-slide" data-image-width="1600" data-image-height="1200">
-                <img class="u-back-image u-expanded" src="images/j1.jpeg">
+                <img class="u-back-image u-expanded" src="images/j1-61.jpeg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-17">
                 <h3 class="u-gallery-heading"></h3>
@@ -230,7 +230,7 @@ borders: top right bottom left !important
             </div>
             <div class="u-effect-fade u-effect-hover-zoom u-gallery-item">
               <div class="u-back-slide" data-image-width="1599" data-image-height="777">
-                <img class="u-back-image u-expanded" src="images/j12.jpeg">
+                <img class="u-back-image u-expanded" src="images/j12-62.jpeg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-18">
                 <h3 class="u-gallery-heading"></h3>
@@ -379,7 +379,7 @@ borders: top right bottom left !important
               <div class="u-container-layout u-valign-middle">
                 <p class="u-custom-font u-font-montserrat u-text u-text-1">1 rue de Chablis, 93017 Bobigny</p>
                 <p class="u-custom-font u-font-montserrat u-text u-text-2">+33 7.71.79.89.51</p>
-                <img src="images/Logo-Blanc.png" alt="" class="u-image u-image-default u-image-1" data-image-width="372" data-image-height="362">
+                <img src="images/Logo-Blanc-10.png" alt="" class="u-image u-image-default u-image-1" data-image-width="372" data-image-height="362">
                 <p class="u-text u-text-3">
                   <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-custom-font u-font-montserrat u-hover-none u-none u-text-palette-1-base u-btn-1" href="mailto:seedyourlungs.trekk@gmail.com">seedyourlungs.trekk@gmail.com</a>
                 </p>
