--- a/Le-projet-SYL.html
+++ b/Le-projet-SYL.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="Le-projet-SYL.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="script.js" defer=""></script>
-    <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
+    <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
     <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
     
     
@@ -29,7 +29,7 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
-  <body class="u-body"><header class="u-clearfix u-header u-sticky u-sticky-6268 u-white u-header" id="sec-4ec6"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-xl-mode"><header class="u-clearfix u-header u-sticky u-sticky-6268 u-white u-header" id="sec-4ec6"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="Accueil.html" data-page-id="210181073" class="u-image u-logo u-image-1" data-image-width="132" data-image-height="154" data-animation-name="rotateIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="" title="Accueil">
           <img src="images/feuille.png" class="u-logo-image u-logo-image-1" data-image-width="70.194">
         </a>
@@ -179,14 +179,14 @@ borders: top right bottom left !important
             <div class="u-layout-row">
               <div class="u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-1">
                 <div class="u-container-layout u-container-layout-2">
-                  <img class="u-expanded-width u-image u-image-1" src="images/2c1d5ea3d14ccd65c0cbcf5497a562b7.jpeg">
+                  <img class="u-expanded-width u-image u-image-1" src="images/275529672_3183491318546316_2082270678249657883_n.jpg" data-image-width="1080" data-image-height="565">
                   <p class="u-custom-font u-font-montserrat u-text u-text-3"> Newsletter n°1</p>
                   <a href="Newsletter-SYL-1-V2.html" class="u-btn u-button-style u-custom-color-2 u-custom-font u-font-montserrat u-text-body-alt-color u-btn-2" target="_blank">VOIR</a>
                 </div>
               </div>
               <div class="u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-2">
                 <div class="u-container-layout u-container-layout-3">
-                  <img class="u-expanded-width u-image u-image-2" src="images/7caf258988b69cc34f0e0ce89d17a719.jpeg">
+                  <img class="u-expanded-width u-image u-image-2" src="images/j44-25.jpeg" data-image-width="1599" data-image-height="777">
                   <p class="u-custom-font u-font-montserrat u-text u-text-4"> Newsletter n°2</p>
                   <a href="newsletter-2.html" class="u-btn u-button-style u-custom-color-2 u-custom-font u-font-montserrat u-text-body-alt-color u-btn-3" target="_blank">VOIR</a>
                 </div>
@@ -212,14 +212,14 @@ borders: top right bottom left !important
             <div class="u-layout-row">
               <div class="u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-1">
                 <div class="u-container-layout u-container-layout-2">
-                  <img class="u-expanded-width u-image u-image-1" src="images/2c1d5ea3d14ccd65c0cbcf5497a562b7.jpeg">
+                  <img class="u-expanded-width u-image u-image-1" src="images/WhatsAppImage2022-03-17at10.34.341.jpeg" data-image-width="1200" data-image-height="1600">
                   <p class="u-custom-font u-font-montserrat u-text u-text-3"> Cahier des charges</p>
                   <a href="files/Cdc_SYL.pdf" class="u-btn u-button-style u-custom-color-2 u-custom-font u-file-link u-font-montserrat u-text-body-alt-color u-btn-2" target="_blank">VOIR</a>
                 </div>
               </div>
               <div class="u-container-style u-layout-cell u-right-cell u-size-30 u-layout-cell-2">
                 <div class="u-container-layout u-container-layout-3">
-                  <img class="u-expanded-width u-image u-image-2" src="images/7caf258988b69cc34f0e0ce89d17a719.jpeg">
+                  <img class="u-expanded-width u-image u-image-2" src="images/WhatsAppImage2022-03-07at15.34.40-28.jpeg" data-image-width="1599" data-image-height="777">
                   <p class="u-custom-font u-font-montserrat u-text u-text-4">Charte graphique</p>
                   <a href="files/CG_SYL.pdf" class="u-btn u-button-style u-custom-color-2 u-custom-font u-file-link u-font-montserrat u-text-body-alt-color u-btn-3" target="_blank">VOIR</a>
                 </div>
@@ -238,7 +238,7 @@ borders: top right bottom left !important
                 <div class="u-container-layout u-valign-middle">
                   <p class="u-custom-font u-font-montserrat u-text u-text-1">1 rue de Chablis, 93017 Bobigny</p>
                   <p class="u-custom-font u-font-montserrat u-text u-text-2">+33 7.71.79.89.51</p>
-                  <img src="images/Logo-Blanc.png" alt="" class="u-image u-image-default u-image-1" data-image-width="372" data-image-height="362">
+                  <img src="images/Logo-Blanc-10.png" alt="" class="u-image u-image-default u-image-1" data-image-width="372" data-image-height="362">
                   <p class="u-text u-text-3">
                     <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-custom-font u-font-montserrat u-hover-none u-none u-text-palette-1-base u-btn-1" href="mailto:seedyourlungs.trekk@gmail.com">seedyourlungs.trekk@gmail.com</a>
                   </p>
