--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="Accueil.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="script.js" defer=""></script>
-    <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
+    <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
     <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
     
     
@@ -28,7 +28,7 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="Accueil.html" data-home-page-title="Accueil" class="u-body"><header class="u-clearfix u-header u-sticky u-sticky-6268 u-white u-header" id="sec-4ec6"><div class="u-clearfix u-sheet u-sheet-1">
+  <body data-home-page="Accueil.html" data-home-page-title="Accueil" class="u-body u-xl-mode"><header class="u-clearfix u-header u-sticky u-sticky-6268 u-white u-header" id="sec-4ec6"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="Accueil.html" data-page-id="210181073" class="u-image u-logo u-image-1" data-image-width="132" data-image-height="154" data-animation-name="rotateIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="" title="Accueil">
           <img src="images/feuille.png" class="u-logo-image u-logo-image-1" data-image-width="70.194">
         </a>
@@ -305,7 +305,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
               <div class="u-container-layout u-valign-middle">
                 <p class="u-custom-font u-font-montserrat u-text u-text-1">1 rue de Chablis, 93017 Bobigny</p>
                 <p class="u-custom-font u-font-montserrat u-text u-text-2">+33 7.71.79.89.51</p>
-                <img src="images/Logo-Blanc.png" alt="" class="u-image u-image-default u-image-1" data-image-width="372" data-image-height="362">
+                <img src="images/Logo-Blanc-10.png" alt="" class="u-image u-image-default u-image-1" data-image-width="372" data-image-height="362">
                 <p class="u-text u-text-3">
                   <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-custom-font u-font-montserrat u-hover-none u-none u-text-palette-1-base u-btn-1" href="mailto:seedyourlungs.trekk@gmail.com">seedyourlungs.trekk@gmail.com</a>
                 </p>
